--- a/css/estilos.css
+++ b/css/estilos.css
@@ -5,7 +5,22 @@ body{
     margin: 0;
     padding: 0;
 }
-#container{
+#cabezera{
+    background: #333;
+    box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.75);
+    color: white;
+    font-weight: bold;
+    margin: 0;
+    padding: 0.5rem;
+
+}
+#cabezera #tagline{
+    padding: 1em 0 0 0;
+    font-weight: normal;
+    font-size: 0.8em;
+
+}
+#container{ 
     width: 70%;
     padding: 1em;
     text-align: left;
